# FEC_Erasure_Code_Unit_Test_Relay

./: CMakeLists.txt  README.md  application_local_simulation.cpp  application_receiver_main.cpp  application_relay_main.cpp  application_sender_main.cpp  build.sh  dependencies.sh
Experimental_Logs/: EXPERIEMENTAL SETUP.rtf
Experimental_Logs/Logs/Adaptive/: .~lock.30-Congestion-Austin-MiamiReceiver-Adaptive.rtf#  .~lock.40-Congestion-Austin-MiamiReceiver-Adaptive.rtf#  .~lock.50-Congestion-Austin-MiamiReceiver-Adaptive.rtf#  .~lock.50-Congestion-Miami-AustinSender-Adaptive.rtf#  10-Congestion-Austin-MiamiReceiver-Adaptive.rtf  10-Congestion-Miami-AustinSender-Adaptive.rtf  100-Congestion-Austin-MiamiReceiver-Adaptive.rtf  100-Congestion-Miami-AustinSender-Adaptive.rtf  20-Congestion-Austin-MiamiReceiver-Adaptive.rtf  20-Congestion-Miami-AustinSender-Adaptive.rtf  30-Congestion-Austin-MiamiReceiver-Adaptive.rtf  30-Congestion-Miami-AustinSender-Adaptive.rtf  (+12 more)
include/: Application_Layer_Receiver.h  Application_Layer_Sender.h  ConnectionManager.h  Decoder.h  Decoder_Basic.h  Decoder_Block_Code.h  Decoder_Symbol_Wise.h  Encoder.h  Encoder_Basic.h  Encoder_Block_Code.h  Erasure_File_Generator.h  Erasure_Simulator.h  FEC_Decoder.h  FEC_Encoder.h  FEC_Macro.h  FEC_Message.h  Memory_Allocator.h  Parameter_Estimator.h  Payload_Simulator.h  Variable_Rate_FEC_Decoder.h  Variable_Rate_FEC_Encoder.h  basicOperations.h  codingOperations.h  isal.h  testBasicOperations.h
src/: Application_Layer_Receiver.cpp  Application_Layer_Sender.cpp  ConnectionManager.cpp  Decoder.cpp  Decoder_Basic.cpp  Decoder_Block_Code.cpp  Decoder_Symbol_Wise.cpp  Encoder.cpp  Encoder_Basic.cpp  Encoder_Block_Code.cpp  Erasure_File_Generator.cpp  Erasure_Simulator.cpp  FEC_Decoder.cpp  FEC_Encoder.cpp  FEC_Message.cpp  Memory_Allocator.cpp  Parameter_Estimator.cpp  Payload_Simulator.cpp  Variable_Rate_FEC_Decoder.cpp  Variable_Rate_FEC_Encoder.cpp  basicOperations.cpp  codingOperations.cpp
(+33 files in other folders)
